# ecommerce

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
notebooks/: denormalize_orders.ipynb
setup/: clickhouse_setup.py  kafka_setup.py  mysql_generate_data.py  mysql_setup.py  setup.py
validation/: orders_validator.py  products_validator.py
validation/great_expectations/: great_expectations.yml
workers/: kafka_consumers.py  kafka_producers.py  models.py
