[tool.poetry]
name = "ecommerce"
version = "0.1.0"
description = ""
authors = ["Zaher Mousa <zaher.musa@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.18"
confluent-kafka = "^1.8.1"
sqlalchemy = "^1.4.0"
clickhouse-sqlalchemy = "^0.2.3"
cryptography = "^3.4.8"
pandas = "^1.3.3"
pymysql = "^1.0.2"
faust = "^1.10.4"
clickhouse_driver = "^0.2.0"
great-expectations = "0.14.10"
jinja2 = "<3.0"
markupsafe = "<2.0"
nbformat = "5.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
